--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     height: 100vh;
-    
 }
 
 .img-container {
@@ -25,10 +24,24 @@ body {
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
-    /* display: none; */
+    visibility: hidden;
 }
 
 
 button img{
     width: 20px;
+}
+
+.title {
+    visibility: hidden;
+}
+
+.img-editor {
+    visibility: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.img-editor>*{
+    margin: 10px;
 }
