--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,28 @@ body.menu-opened .main-nav-list {
 
 .img-container>*:hover {
     box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
+}
 
+.saved-img-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 4px;
+    margin: 20px;
+}
+
+.saved-img-container>* {
+    background-color: blueviolet;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    width: 300px;
+    cursor: pointer;
+}
+
+.saved-img-container>*:hover {
+    box-shadow: 0 0 .25rem rgba(0, 0, 0, 0.5), -.125rem -.125rem 1rem rgba(239, 71, 101, 0.5), .125rem .125rem 1rem rgba(255, 154, 90, 0.5);
 }
 
 .my-canvas {
@@ -215,13 +236,14 @@ button img {
 }
 
 .team-member h4 {
-    margin-top: 25px;
+    margin-top: 0;
     margin-bottom: 0;
     text-transform: none;
 }
 
 .team-member p {
-    margin-top: 0;
+    margin-left: 15px;
+    text-align: left;
 }
 
 ul.social-buttons {
@@ -286,6 +308,10 @@ ul.social-buttons li a:hover {
         width: 100%;
     }
 
+    .logo-main img {
+        height: 30px;
+    }
+
     .open-close-nav {
         position: fixed;
         right: 0;
@@ -325,6 +351,15 @@ ul.social-buttons li a:hover {
     }
 
     .img-container>* {
+        width: 200px;
+    }
+    .saved-img-container {
+        justify-items: center;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+
+    }
+
+    .saved-img-container>* {
         width: 200px;
     }
 }
